--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="l1TtZ_i-tkZD0MaXYl5zMect3iC5klu7XMI8hToHnZI" />
     
     <!-- Tailwind css CDN -->
     <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" /> -->
