--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,15 @@
       content="Web site created using create-react-app"
     />
     <meta name="google-site-verification" content="VYIQr3e450XMiDPJvUx3R8uUdqCGvDKgl5iDH9cza7s" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-17ND2NLD4M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-17ND2NLD4M');
+    </script>
     
     <!-- Tailwind css CDN -->
     <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" /> -->
